pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_params/explicit_before_unlabeled.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(yellow~y: Nat, x: Nat): Nat {
    Nat.O
};
